# sqlfp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  sqlfp.pyi
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_sqlfp_vs_sqlglot.py
src/: lib.rs
tests/: hashes_refs.txt  test_sqlfp.py
